<?xml version="1.0"?>
<package>
  <name>leptrino_reader</name>
  <version>0.1.0</version>
  <description>This package publish human ZMP by using foor 6-axis sensor</description>
  <maintainer email="ishiguro@jsk.imi.i.u-tokyo.ac.jp">ishiguroJSK</maintainer>
  <license>BSD</license>
  <author email="ishiguro@jsk.imi.i.u-tokyo.ac.jp">ishiguroJSK</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>libusb-1.0-dev</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
</package>
